
Besure to also join the discord: https://discord.gg/wv6huJAwEv

NOTE: Make sure you refresh the page! Sometimes you will not get the lastest update!

+ Means something was added
^ Means something was upgraded or changed
- Means something was removed
------------------------------------------------------------
Oct, 30
+ Added OvO
+ Added Fancy Pants Adventures
+ Added Kitchen gun game
+ Added Tiny Islands
------------------------------------------------------------
Oct, 29
+ Added Rolling Forests
+ Added Waterworks!
------------------------------------------------------------
Oct, 28
+ Added Flippy Fish
+ Added Frying Nemo
^ Added more reviews
------------------------------------------------------------
Oct, 27
+ Added Offline Paradise
+ Added Replit Deployment!
------------------------------------------------------------
Oct, 24
+ Added more reviews
------------------------------------------------------------
Oct, 23
+ Added Fire Boy and Water Girl
+ Added Super Mario Construct
+ Added Yoshi's Fabrication Station
------------------------------------------------------------
Oct, 20
+ Added Doctor Acorn 2
+ Added Twitch Tetris
+ Added quick access to site settings
^ Improved the 404 page with more fun stats
- Removed the ip request on 404 page
------------------------------------------------------------
Oct, 19
^ Added more reviews
------------------------------------------------------------
Oct, 17
+ Added Sandboxels
------------------------------------------------------------
Oct, 14
^ Fixed a bug
------------------------------------------------------------
Oct, 13
+ Added Space Garden
+ Added Rabbit Samurai
+ Added Rabbit Samurai 2
^ Added more splash texts
^ Added more reviews
------------------------------------------------------------
Oct, 12
+ Added Dante
+ Added SHUTTLEDECK
+ Added Edge Lets surf
+ Added Ninja vs Evil Corp
+ Added Sleeping beauty
+ Added Black hole square
+ Added A Dark Room
^ Added more splash texts